Added pics and media source to media.html

--- a/facts.html
+++ b/facts.html
@@ -16,6 +16,12 @@
     </header>
     <main>
       <h1>Outer Space Facts</h1>
+      <ol>
+       <li>It has our ISS which has 7 people at all time.</li>
+       <li>Space is a silent place.</li>
+       <li></li>
+      </ol>
+      <a href="https://en.wikipedia.org/wiki/International_Space_Station" target="_blank">Wikipedia page for ISS</a>
     </main>  
   </body>
 </html>
