--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Outer Space Home Page</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <style>
+      body{
+        background-image: url('https://i.pinimg.com/originals/20/77/66/20776607b5924d1607a6a5dc33dc6074.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -14,8 +21,11 @@
         <a href="media.html">Space Photos and Videos</a>
       </nav>  
     </header>
+    <!-- Main content -->
     <main>
       <h1>Outer Space Home Page</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde incidunt voluptates quaerat, eius dolorum hic fugit eligendi esse aliquam rem quis recusandae ipsum perferendis dignissimos praesentium nobis voluptatum explicabo, quos atque soluta ipsa error reiciendis. Expedita eaque accusantium eum amet incidunt, voluptatibus sit tenetur numquam laudantium soluta, excepturi, fugiat suscipit.</p>
+      <img src="https://cdn.dnaindia.com/sites/default/files/styles/full/public/2018/12/29/771173-astronaut.jpg" alt="Astrounot taking a picture in front of Earth" width="250"/>
     </main>  
   </body>
 </html>
