--- a/media.html
+++ b/media.html
@@ -16,6 +16,25 @@
     </header>
     <main>
       <h1>Outer Space Pictures and Videos</h1>
+      <a href="#video-section">Jump to Videos </a>
+    <section>
+      <h2>Space Photos</h2>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDwg0_iquTtXnM-L7edVMu_gq5Sg7klFkqag&usqp=CAU" alt=Image of sun />
+    </section>
+    <section id="video-section">
+      <h2>Space Videos</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/E9oKEJ1pXPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <hr>
+      <video controls loop muted>
+        <source src="old_movie_countdown.mp4" type="video/mp4"/>
+      <hr>  
+      </video>  
+    </section>
     </main>
   </body>
 </html>
